# lecture2018c

./: .gitignore  CMakeLists.txt
exam/: exam01.c  exam02.c  exam03.c  exam04.c  exam05.c  exam06.c  exam07.c  exam08.c  exam09.c  exam10.c  exam11.c  exam12.c
lect08/: bmi.c  fizzbuzz.c  multiple.c
lect09/: bmi.c  fizzbuzz.c  sum.c
lect10/: bmi.c  tictactoe.c
lect11/: address.c  array.c  swap.c
lect12/: practice01.c  practice02.c  practice03.c  practice04.c  practice05.c  practice06.c  practice07.c  practice08.c
practice/: practice09.c  practice10.c  practice11.c  practice12.c  practice13.c  practice14.c
