cmake_minimum_required(VERSION 3.10)
project(lecture2018c C)

set(CMAKE_C_STANDARD 99)

add_executable(lect08-bmi lect08/bmi.c)
add_executable(lect08-multiple lect08/multiple.c)
add_executable(lect08-fizzbuzz lect08/fizzbuzz.c)
add_executable(lect09-bmi lect09/bmi.c)
add_executable(lect09-sum lect09/sum.c)
add_executable(lect09-fizzbuzz lect09/fizzbuzz.c)
add_executable(lect10-bmi lect10/bmi.c)
add_executable(lect10-bmtictactoe lect10/tictactoe.c)
add_executable(lect11-address lect11/address.c)
add_executable(lect11-array lect11/array.c)
add_executable(lect11-swap lect11/swap.c)
add_executable(lect12-practice01 lect12/practice01.c)
add_executable(lect12-practice02 lect12/practice02.c)
add_executable(lect12-practice03 lect12/practice03.c)
add_executable(lect12-practice04 lect12/practice04.c)
add_executable(lect12-practice05 lect12/practice05.c)
add_executable(lect12-practice06 lect12/practice06.c)
add_executable(lect12-practice07 lect12/practice07.c)
add_executable(lect12-practice08 lect12/practice08.c)
add_executable(lect12-exam01 exam/exam01.c)
add_executable(lect12-exam02 exam/exam02.c)
add_executable(lect12-exam03 exam/exam03.c)
add_executable(lect12-exam04 exam/exam04.c)
add_executable(lect12-exam05 exam/exam05.c)
add_executable(lect12-exam06 exam/exam06.c)
add_executable(practice-practice09 practice/practice09.c)
add_executable(practice-practice10 practice/practice10.c)
add_executable(practice-practice11 practice/practice11.c)
add_executable(practice-practice12 practice/practice12.c)
add_executable(practice-practice13 practice/practice13.c)
add_executable(practice-practice14 practice/practice14.c)
